Ajout des class

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=backend
+
+# === DATABASE ===
+spring.datasource.url=jdbc:postgresql://localhost:5432/loupsolitaire
+spring.datasource.username=mariussiwertz
+spring.datasource.password=Banane1997
+
+# === JPA ===
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# === (optionnel) Encodage UTF-8 pour les caractères spéciaux ===
+spring.datasource.hikari.connection-init-sql=SET NAMES 'UTF8'
